<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/bg"
    android:orientation="vertical">
<ScrollView
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_weight="1">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">
        <com.wang.avi.AVLoadingIndicatorView
            android:id="@+id/gps"
            android:layout_width="70dp"
            android:layout_height="70dp"
            app:indicator="BallClipRotatePulse"
            app:indicator_color="#006de8"
            android:visibility="gone"
            android:layout_gravity="top|right"


            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/upload_frequency"
            android:id="@+id/lblInterval"
            android:layout_marginTop="25dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentRight="true"
            android:textColor="@color/text_hint_color"
            android:layout_alignParentEnd="true" />
        <RadioGroup
            android:id="@+id/intervalRadioGroup"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_below="@+id/lblInterval"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp">
            <RadioButton
                android:id="@+id/i1"
                android:checked="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/text_hint_color"
                android:text="@string/one_minute" >
            </RadioButton>
            <RadioButton
                android:id="@+id/i5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/text_hint_color"
                android:text="@string/five_minutes" >
            </RadioButton>
            <RadioButton
                android:id="@+id/i15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/text_hint_color"
                android:text="@string/fifteen_minutes" >
            </RadioButton>
        </RadioGroup>





    </LinearLayout>
</ScrollView>


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"

        android:orientation="vertical" >

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/red_tracking_button"
            android:text="@string/tracking_is_off"
            android:id="@+id/trackingButton"
            android:layout_weight="1"
            android:height="50dip" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:gravity="bottom">

        <include
            android:id="@+id/container_header_lyt"
            layout="@layout/poweredby"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        </include>

    </LinearLayout>
</LinearLayout>
