<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical">


    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1">




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            android:background="@drawable/lineralayout2"
            android:orientation="vertical"
            android:padding="5sp">

            <Spinner
                android:id="@+id/spr_type_activity"
                style="@style/Widget.AppCompat.Spinner.Underlined"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:drawablePadding="20dp"
                android:layout_weight="1.0"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/text_hint_color"
                />


            <EditText
                android:id="@+id/edt_what_happened"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:background="#00000000"
                android:drawablePadding="20dp"
                android:hint="@string/txt_hint_what_happened"
                android:inputType="textCapSentences"
                android:singleLine="true"
                android:textColor="#000000"
                android:paddingLeft="11dp"
                android:textColorHint="@color/text_hint_color" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="0.5dp"
                android:background="#000000" />

            <EditText
                android:id="@+id/edt_when"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:background="#00000000"
                android:drawablePadding="20dp"
                android:hint="@string/txt_hint_when"
                android:inputType="textCapSentences"
                android:singleLine="true"
                android:textColor="#000000"
                android:paddingLeft="11dp"
                android:textColorHint="@color/text_hint_color" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="0.5dp"
                android:background="#000000" />

            <EditText
                android:id="@+id/edt_location"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:background="#00000000"
                android:drawablePadding="20dp"
                android:hint="@string/txt_hint_location"
                android:paddingLeft="11dp"
                android:inputType="textCapSentences"
                android:singleLine="true"

                android:textColor="#000000"
                android:textColorHint="@color/text_hint_color" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="0.5dp"
                android:background="#000000" />



            <EditText
                android:id="@+id/edt_city"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:background="#00000000"
                android:drawablePadding="20dp"
                android:hint="@string/txt_hint_city"
                android:inputType="textCapSentences"
                android:singleLine="true"
                android:paddingLeft="11dp"
                android:textColor="#000000"
                android:textColorHint="@color/text_hint_color" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="0.5dp"
                android:background="#000000" />
            <EditText
                android:id="@+id/edt_address"
                android:layout_width="fill_parent"
                android:layout_height="80dp"
                android:background="#00000000"
                android:drawablePadding="20dp"
                android:gravity="start"
                android:hint="@string/txt_hint_address"
                android:inputType="textCapSentences"
                android:singleLine="true"
                android:textColor="#000000"
                android:paddingLeft="11dp"
                android:textColorHint="@color/text_hint_color" />


            <View
                android:layout_width="fill_parent"
                android:layout_height="0.5dp"
                android:background="#000000" />



        </LinearLayout>


    </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="horizontal">


        <com.andexert.library.RippleView

            rv_centered="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginTop="10dp">

            <Button
                android:id="@+id/btn_previous"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:background="@drawable/orrangebutton"
                android:drawableLeft="@drawable/btn_back"
                android:ems="7"
                android:paddingLeft="20dp"
                android:drawablePadding="5dp"
                android:gravity="start|center"
                android:text="Back"
                android:textColor="@android:color/background_light"
                android:textStyle="bold" />
        </com.andexert.library.RippleView>

        <com.andexert.library.RippleView
            rv_centered="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginTop="10dp">

            <Button
                android:id="@+id/btn_next"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:background="@drawable/orrangebutton"
                android:drawableRight="@drawable/btn_next"
                android:ems="7"
                android:drawablePadding="5dp"
                android:paddingRight="20dp"
                android:gravity="center|end"
                android:text="Next"
                android:textColor="@android:color/background_light"
                android:textStyle="bold" />
        </com.andexert.library.RippleView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:gravity="center">

        <include
            android:id="@+id/container_header_lyt"
            layout="@layout/poweredby"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >

        </include>

    </LinearLayout>

</LinearLayout>